--- a/sourse/pug/blocks/sHaircutCare/_sHaircutCare.scss
+++ b/sourse/pug/blocks/sHaircutCare/_sHaircutCare.scss
@@ -21,15 +21,13 @@
 
 
 .help-questions{
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	// display: flex;
+	margin-top: 50px;
+	
+	// justify-content: center;
+	// align-items: center;
 	position: relative;
-	z-index: -1;
-	left: 0;
-	top: 0;
+	text-align: center;
 	p {
 		color: $white;
 		margin: 0;
@@ -38,9 +36,9 @@
 		position: absolute;
 		background: $black;
 		padding: 8px;
-		transform: rotate(13.96deg);
-		top: rem(74);
-		transition: all 0.5s ease;
+		transform: rotate(13.96deg) translateX(-50%);
+		top: rem(38);
+		left: 50%;
 	}
 }
 .haircut-help{
