--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -305,7 +305,7 @@ input::-webkit-inner-spin-button {
 }
 .select2-container--default .select2-results__option--highlighted{
 	&[aria-selected]{
-		background-color: $white;
+		background-color: #ddd;
 	}
 	&.select2-results__option--selectable {
 		color: $black;
