--- a/sourse/pug/blocks/sHaircutCare/_sHaircutCare.pug
+++ b/sourse/pug/blocks/sHaircutCare/_sHaircutCare.pug
@@ -22,11 +22,11 @@ mixin sHaircutCare(data)
 			+b.haircut-help 
 				.row 
 					.col-12.col-md-6 
-						+b.accardion--js 
+						+b.accardion--js.active
 							+e.head--js.haircut-help-accordion__h
 								h5 Помогут ли мне с выбором стрижки?
 								+e.IMG(src='img/svg/arrow-r.svg').i
-							+e.content--js.haircut-help-accordion__p
+							+e.content--js.haircut-help-accordion__p.active
 								p От 45 минут до 1 часа. 
 						+b.accardion--js 
 							+e.head--js.haircut-help-accordion__h
