--- a/sourse/pug/blocks/sFilter/_sFilter.scss
+++ b/sourse/pug/blocks/sFilter/_sFilter.scss
@@ -33,7 +33,7 @@
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
 } // end.sFilter
-
+	
 
 .select2-selection__arrow{
 	&::before{
@@ -56,11 +56,8 @@
 	}
 	.select2-selection--single{
 		background: $black;
+		.select2-selection__rendered{
+			color: $white;
+		}
 	}
-}
-
-.select2-dropdown .select2-dropdown--below 
-.select2-results__options .select2-results__option 
-.select2-results__option--selectable:hover{
-	background: #ddd;
 }
