--- a/sourse/pug/blocks/sServices/_sServices.scss
+++ b/sourse/pug/blocks/sServices/_sServices.scss
@@ -8,7 +8,9 @@
 	p{
 		margin-bottom: 25px;
 	}
-
+	h2{
+		font-size: 24px;
+	}
 	
 	@include media-breakpoint-up(sm) {}
 	@include media-breakpoint-between(md, xl) {}
