--- a/sourse/pug/blocks/sFilter/_sFilter.scss
+++ b/sourse/pug/blocks/sFilter/_sFilter.scss
@@ -4,7 +4,7 @@
 	// --sPB: ;
 	// --sTPB: ;
 
-	padding: 26px 0;
+	padding: 26px 24px;
 	margin-bottom: 36px;
 
 	background: $secondary;
@@ -22,10 +22,8 @@
 		.select2-container--default{
 			max-width: 100%;
 		}
-		&__col:not(:last-of-type){
-			.select2-container--default{
-				padding-bottom: 26px;
-			}
+		.row{
+			--bs-gutter-y:26px
 		}
 	}
 	@include media-breakpoint-up(xl) {}
@@ -60,4 +58,8 @@
 			color: $white;
 		}
 	}
+}
+
+.select2-container{
+	width: 100% !important;
 }
