--- a/sourse/pug/blocks/sFilter/_sFilter.scss
+++ b/sourse/pug/blocks/sFilter/_sFilter.scss
@@ -30,6 +30,11 @@
 	@include media-breakpoint-between(md, xl) {}
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
+	.select2-results__option{
+		&:nth-child(1){
+			display: none !important;
+		}
+	}
 } // end.sFilter
 	
 
